Mapeando os usuário na tela de home(com ngOnInit)

--- a/src/components/auth/auth.component.html
+++ b/src/components/auth/auth.component.html
@@ -15,5 +15,11 @@
       formControlName="password"
     />
   </div>
-  <button [disabled]="!formAuth.valid" type="submit">Entrar</button>
+  <button
+    class="bg-slate-900 text-white"
+    [disabled]="!formAuth.valid"
+    type="submit"
+  >
+    Entrar
+  </button>
 </form>
