--- a/src/components/home/home.component.html
+++ b/src/components/home/home.component.html
@@ -1,15 +1,10 @@
 <div class="flex items-center p-5 gap-12">
   <div
-    *ngFor="let user of users"
-    class="flex flex-col gap-5 bg-slate-700 p-5 items-center h-auto"
+    *ngFor="let user of users; let i = index"
+    class="flex flex-col gap-5 bg-slate-700 p-5 rounded cursor-pointer transform duration-300 hover:scale-105 items-center h-auto"
   >
-    <img
-      [src]="user.image_url"
-      alt="avatar"
-      class="rounded-circle"
-      width="100"
-      height="100"
-    />
+    <img [src]="user.image_url" alt="avatar" class="rounded-full w-20 h-20" />
+    <p class="text-white">ID: {{ i + 1 }}</p>
     <h5 class="text-white">{{ user.name }}</h5>
     <p class="text-red-500">Cargo: {{ user.role }}</p>
     <p class="text-white">{{ user.email }}</p>
