WebSockets - Tentatia de no-reload

--- a/src/components/charts/charts.component.html
+++ b/src/components/charts/charts.component.html
@@ -1,3 +1,11 @@
+<!-- Base para usar o Chart
+<div class="flex justify-center items-center min-h-screen">
+  <div class="flex flex-col gap-5 h-[400px] w-[400px]">
+    <h1 class="text-white text-center">Metas - Financeiro</h1>
+  </div>
+</div>
+ -->
+
 <div class="flex justify-center items-center min-h-screen">
   <div class="flex flex-col gap-5 h-[400px] w-[400px]">
     <h1 class="text-white text-center">Metas - Financeiro</h1>
