--- a/src/components/charts/charts.component.html
+++ b/src/components/charts/charts.component.html
@@ -9,6 +9,6 @@
 <div class="flex justify-center items-center min-h-screen">
   <div class="flex flex-col gap-5 h-[400px] w-[400px]">
     <h1 class="text-white text-center">Metas - Financeiro</h1>
-    <canvas id="myChart" class="bg-slate-50 rounded p-2 w-full h-full"></canvas>
+    <canvas id="canvas" class="bg-slate-50 rounded p-2 w-full h-full">{{chart}}</canvas>
   </div>
 </div>
