--- a/src/components/charts/charts.component.html
+++ b/src/components/charts/charts.component.html
@@ -6,12 +6,8 @@
 </div>
  -->
 
-<div class="flex justify-center items-center min-h-screen">
-  <div class="flex flex-col gap-5 h-[400px] w-[400px]">
-    <h1 class="text-white text-center">Metas - Financeiro</h1>
-    <canvas id="canvas" class="bg-slate-50 rounded p-2 w-full h-full">{{
-      chart
-    }}</canvas>
+<div class="flex justify-start items-start min-h-screen">
+  <div class="flex gap-5 h-[400px] w-[400px] pt-5 pl-5">
+    <canvas #barChart class="bg-slate-50 rounded p-2 w-full h-full"></canvas>
   </div>
 </div>
-<app-pie-chart></app-pie-chart>
