Criação de componente ChartGenericComponent, para reutilizar

--- a/src/components/charts/charts.component.html
+++ b/src/components/charts/charts.component.html
@@ -6,8 +6,8 @@
 </div>
  -->
 
-<div class="flex justify-start items-start min-h-screen">
-  <div class="flex gap-5 h-[400px] w-[400px] pt-5 pl-5">
-    <canvas #barChart class="bg-slate-50 rounded p-2 w-full h-full"></canvas>
-  </div>
-</div>
+<canvas
+  [id]="chartReference"
+  class="bg-slate-50 rounded p-2 transform duration-300 hover:scale-105"
+>
+</canvas>
