--- a/src/components/header/header.component.html
+++ b/src/components/header/header.component.html
@@ -1,1 +1,9 @@
-<p>header works!</p>
+<header
+  class="flex w-full bg-slate-700 h-14 items-center text-white justify-between p-2"
+>
+  <span class="">Dashbourd</span>
+  <img
+    class="w-10 h-10 rounded-full cursor-pointer"
+    src="https://i.imgur.com/Rn9rEvI.jpeg"
+  />
+</header>
