Formatando em R$ os valores do gráfico

--- a/src/components/home/home.component.html
+++ b/src/components/home/home.component.html
@@ -15,7 +15,13 @@
 </div>
 <div class="flex justify-start items-start min-h-screen">
   <div class="flex gap-5 h-[400px] w-[400px] pt-5 pl-5">
-    <app-charts [chartReference]="'chart1'" />
-    <app-charts [chartReference]="'chart2'" [chartType]="'bar'" />
+    <app-charts 
+      [chartReference]="'chart1'" 
+      [chartType]="'pie'" 
+      [chartTitle]="'Faturamento Atual'" />
+    <app-charts 
+      [chartReference]="'chart2'" 
+      [chartType]="'bar'" 
+      [chartTitle]="'Faturamento Atual'" />
   </div>
 </div>
