dando um style no gráfico

--- a/src/components/home/home.component.html
+++ b/src/components/home/home.component.html
@@ -18,7 +18,8 @@
     <app-charts 
       [chartReference]="'chart1'" 
       [chartType]="'pie'" 
-      [chartTitle]="'Faturamento Atual'" />
+      [chartTitle]="'Faturamento Atual - Produtos Vendidos'"
+      />
     <app-charts 
       [chartReference]="'chart2'" 
       [chartType]="'bar'" 
