--- a/src/components/home/home.component.html
+++ b/src/components/home/home.component.html
@@ -2,9 +2,10 @@
 <div class="flex flex-col gap-5 p-5">
   <div class="flex items-center gap-5">
     <div
-      *ngFor="let user of users; let i = index"
-      class="flex flex-col gap-5 bg-slate-700 p-5 rounded cursor-pointer transform duration-300 hover:scale-105 items-center h-auto"
+    *ngFor="let user of users; let i = index"
+    class="flex flex-col gap-5 bg-slate-700 p-5 rounded cursor-pointer transform duration-300 hover:scale-105 items-center h-auto"
     >
+    <button (click)="handleLogout()">SAIR</button>
       <img [src]="user.image_url" alt="avatar" class="rounded-full w-20 h-20" />
       <p class="text-white">ID: {{ i + 1 }}</p>
       <h5 class="text-white">{{ user.name }}</h5>
@@ -15,7 +16,7 @@
 </div>
 <div class="flex justify-start items-start min-h-screen">
   <div class="flex gap-5 h-[400px] w-[400px] pt-5 pl-5">
-    <app-charts 
+    <app-charts
       [messageSockets]="'sales'"
       [chartReference]="'chart1'" 
       [chartType]="'pie'" 
