--- a/src/components/home/home.component.html
+++ b/src/components/home/home.component.html
@@ -1,10 +1,8 @@
 <app-header></app-header>
 <div class="flex flex-col gap-5 p-5">
   <div class="flex items-center gap-5">
-    <div
-    *ngFor="let user of users; let i = index"
-    class="flex flex-col gap-5 bg-slate-700 p-5 rounded cursor-pointer transform duration-300 hover:scale-105 items-center h-auto"
-    >
+    <div *ngFor="let user of users; let i = index"
+      class="flex flex-col gap-5 bg-slate-700 p-5 rounded cursor-pointer transform duration-300 hover:scale-105 items-center h-auto">
       <img [src]="user.image_url" alt="avatar" class="rounded-full w-20 h-20" />
       <p class="text-white">ID: {{ i + 1 }}</p>
       <h5 class="text-white">{{ user.name }}</h5>
@@ -15,16 +13,9 @@
 </div>
 <div class="flex justify-start items-start min-h-screen">
   <div class="flex gap-5 h-[400px] w-[400px] pt-5 pl-5">
-    <app-charts
-      [messageSockets]="'sales'"
-      [chartReference]="'chart1'" 
-      [chartType]="'pie'" 
-      [chartTitle]="'Faturamento Atual - Produtos Vendidos'"
-      />
-    <app-charts 
-      [messageSockets]="'sales'"
-      [chartReference]="'chart2'" 
-      [chartType]="'bar'" 
+    <app-charts [messageSockets]="'sales'" [chartReference]="'chart1'" [chartType]="'pie'"
+      [chartTitle]="'Faturamento Atual - Produtos Vendidos'" />
+    <app-charts [messageSockets]="'sales'" [chartReference]="'chart2'" [chartType]="'bar'"
       [chartTitle]="'Faturamento Atual'" />
   </div>
 </div>
