--- a/src/components/home/home.component.html
+++ b/src/components/home/home.component.html
@@ -11,11 +11,19 @@
     </div>
   </div>
 </div>
-<div class="flex justify-start items-start min-h-screen">
-  <div class="flex gap-5 h-[400px] w-[400px] pt-5 pl-5">
-    <app-charts [messageSockets]="'sales'" [chartReference]="'chart1'" [chartType]="'pie'"
-      [chartTitle]="'Faturamento Atual - Produtos Vendidos'" />
-    <app-charts [messageSockets]="'sales'" [chartReference]="'chart2'" [chartType]="'bar'"
+<!-- <div class="flex justify-center items-start min-h-screen">
+  <div class="flex h-[400px] w-[400px] pt-5 pl-5">
+    <app-charts 
+      [messageSockets]="'sales'" 
+      [chartReference]="'chart2'" 
+      [chartType]="'bar'"
       [chartTitle]="'Faturamento Atual'" />
   </div>
-</div>
+  <div class="flex h-[400px] w-[400px] pt-5 pl-5">
+    <app-charts 
+      [messageSockets]="'sales'" 
+      [chartReference]="'chart1'" 
+      [chartType]="'pie'"
+      [chartTitle]="'Faturamento Atual - Produtos Vendidos'" />
+  </div>
+</div> -->
