--- a/src/components/header/header.component.html
+++ b/src/components/header/header.component.html
@@ -1,4 +1,4 @@
-<mat-toolbar color="primary">
+<mat-toolbar color="primary" class="fixed">
   <div class="flex w-full items-center justify-end">
     <button mat-icon-button [matMenuTriggerFor]="menu" class="custom-avatar-button">
       <mat-icon>account_circle</mat-icon>
