--- a/src/components/home/home.component.html
+++ b/src/components/home/home.component.html
@@ -1,5 +1,5 @@
 <app-layout-dash-header></app-layout-dash-header>
-<div class="flex flex-col gap-5 p-5">
+<!-- <div class="flex flex-col gap-5 p-5">
   <div class="flex items-center gap-5">
     <div *ngFor="let user of users; let i = index"
       class="flex flex-col gap-5 bg-slate-700 p-5 rounded cursor-pointer transform duration-300 hover:scale-105 items-center h-auto">
@@ -10,7 +10,7 @@
       <p class="text-white">{{ user.email }}</p>
     </div>
   </div>
-</div>
+</div> -->
 <!-- <div class="flex justify-center items-start min-h-screen">
   <div class="flex h-[400px] w-[400px] pt-5 pl-5">
     <app-charts 
