mapenado o histórico de vendas

--- a/src/components/dashboard/dashboard.component.html
+++ b/src/components/dashboard/dashboard.component.html
@@ -1,5 +1,5 @@
 <div
-    class="flex flex-col min-h-full bg-slate-300 w-60 overflow-x-hidden z-10 pt-16">
+    class="flex flex-col min-h-full bg-slate-300 w-60 overflow-x-hidden">
     <div 
         *ngFor="let item of menuItems"
         class="flex items-center gap-2 p-2 hover:bg-slate-200 cursor-pointer"
