--- a/src/components/saleshistory/saleshistory.component.html
+++ b/src/components/saleshistory/saleshistory.component.html
@@ -1,19 +1,20 @@
 <app-header></app-header>
 <div class="flex h-screen">
     <app-dashboard></app-dashboard>
-    <div class="flex-1 p-5 mt-2">
+    <div class="flex flex-col w-96 p-5 ml-20 mt-2">
         <h2 class="text-2xl font-bold text-white">Histórico de Vendas</h2>
         <div *ngFor="let sale of salesHistory" class="mt-4 p-4 border rounded shadow-md bg-white">
             <div class="flex items-center space-x-4">
                 <img [src]="sale.product_image" alt="Product Image" class="w-16 h-16 rounded object-cover">
                 <div>
                     <p class="font-semibold text-lg">{{ sale.product_name }}</p>
-                    <p class="text-gray-500">{{ sale.user_name }}</p>
+                    <p class="text-gray-500">{{ sale.store_name }}</p>
                 </div>
             </div>
             <div class="mt-2">
                 <p><strong>Quantidade Vendida:</strong> {{ sale.quantity_sold }}</p>
                 <p><strong>Total Faturado:</strong> {{ sale.total_billed}}</p>
+                <p><strong>Vendedor:</strong> {{ sale.user_name }}</p>
             </div>
         </div>
     </div>
