removendo dashboard e adicionando layout-options diferente

--- a/src/components/header/header.component.html
+++ b/src/components/header/header.component.html
@@ -1,5 +1,5 @@
-<mat-toolbar color="primary">
-  <div class="flex w-full items-center justify-end">
+<mat-toolbar color="primary" class="fixed w-full z-50">
+  <div class="flex justify-end items-center w-full">
     <button mat-icon-button [matMenuTriggerFor]="menu" class="custom-avatar-button">
       <mat-icon>account_circle</mat-icon>
     </button>
