--- a/src/styles.scss
+++ b/src/styles.scss
@@ -41,7 +41,7 @@ $app-theme: mat.define-light-theme((
 @tailwind utilities;
 
 body{
-    background-color: #181a1b;
+    background-color: #f3f4f6
 }
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
