--- a/src/components/home/home.component.html
+++ b/src/components/home/home.component.html
@@ -1,3 +1,5 @@
+<app-layout-options />
+
 <!-- <div class="flex flex-col gap-5 p-5">
   <div class="flex items-center gap-5">
     <div *ngFor="let user of users; let i = index"
