--- a/src/components/saleshistory/saleshistory.component.html
+++ b/src/components/saleshistory/saleshistory.component.html
@@ -1,8 +1,7 @@
 <app-header></app-header>
 <div class="flex h-screen">
-    <app-dashboard></app-dashboard>
     <div class="flex flex-col w-96 p-5 ml-20 mt-2">
-        <h2 class="text-2xl font-bold text-white">Histórico de Vendas</h2>
+        <h2 class="text-4xl font-bold text-slate-950">Histórico de Vendas</h2>
         <div *ngFor="let sale of salesHistory" class="mt-4 p-4 border rounded shadow-md bg-white">
             <div class="flex items-center space-x-4">
                 <img [src]="sale.product_image" alt="Product Image" class="w-16 h-16 rounded object-cover">
