--- a/src/components/layout-options/layout-options.component.html
+++ b/src/components/layout-options/layout-options.component.html
@@ -1,24 +1,29 @@
 <app-header />
-<div class="min-h-screen flex justify-center items-start gap-20 p-4 pt-24">
+<div class="flex flex-col p-4 pt-24">
+  <div class="flex flex-wrap justify-center gap-8 mt-4">
+    
+    <mat-card class="flex flex-col text-center items-center p-4 w-96 cursor-pointer" (click)="handleNavigateToHistoryPayments()">
+      <mat-icon color="primary">history</mat-icon>
+      <div>
+        <h2 class="text-xl font-bold">Histórico de Pagamentos</h2>
+        <p class="text-gray-600">Acompanhe todos os pagamentos recentes.</p>
+      </div>
+    </mat-card>
+
+    <mat-card class="flex flex-col text-center items-center p-4 w-96 cursor-pointer" (click)="handleNavigateToProductBilling()">
+      <mat-icon color="primary">attach_money</mat-icon>
+      <div>
+        <h2 class="text-xl font-bold">Faturamento</h2>
+        <p class="text-gray-600">Veja o faturamento total e mensal.</p>
+      </div>
+    </mat-card>
+
     <mat-card class="flex flex-col text-center items-center p-4 w-96 cursor-pointer">
-        <mat-icon color="primary" class="">history</mat-icon>
-        <div>
-            <h2 class="text-xl font-bold">Histórico de Pagamentos</h2>
-            <p class="text-gray-600">Acompanhe todos os pagamentos recentes.</p>
-        </div>
+      <mat-icon color="primary">group</mat-icon>
+      <div>
+        <h2 class="text-xl font-bold">Funcionários</h2>
+        <p class="text-gray-600">Gerencie os dados dos funcionários.</p>
+      </div>
     </mat-card>
-    <mat-card class="flex  flex-col text-center items-center p-4 w-96 cursor-pointer">
-        <mat-icon color="primary" class="">attach_money</mat-icon>
-        <div>
-            <h2 class="text-xl font-bold">Faturamento</h2>
-            <p class="text-gray-600">Veja o faturamento total e mensal.</p>
-        </div>
-    </mat-card>
-    <mat-card class="flex  flex-col text-center items-center p-4 w-96 cursor-pointer">
-        <mat-icon color="primary" class="">group</mat-icon>
-        <div>
-            <h2 class="text-xl font-bold">Funcionários</h2>
-            <p class="text-gray-600">Gerencie os dados dos funcionários.</p>
-        </div>
-    </mat-card>
+  </div>
 </div>
