--- a/src/components/saleshistory/saleshistory.component.html
+++ b/src/components/saleshistory/saleshistory.component.html
@@ -1,4 +1,4 @@
-<app-header></app-header>
+<app-layout-options />
 <div class="flex h-screen">
     <div class="flex flex-col w-96 p-5 ml-20 mt-2">
         <h2 class="text-4xl font-bold text-slate-950">Histórico de Vendas</h2>
