Criando tabela e gráfico de vendas

--- a/src/components/productbilling/productbilling.component.html
+++ b/src/components/productbilling/productbilling.component.html
@@ -1,5 +1,6 @@
 <app-layout-options />
 
+<h2 class="text-4xl font-bold text-slate-950 mb-5 mt-5 text-center">Faturamento</h2>
 <div class="pt-10 flex justify-center items-center gap-6">
   <div class="flex h-[400px] w-[400px] bg-white rounded-lg shadow-custom p-4">
     <app-charts 
