--- a/src/components/layout-options/layout-options.component.html
+++ b/src/components/layout-options/layout-options.component.html
@@ -1,12 +1,11 @@
 <app-header />
-<div class="flex flex-col p-4 pt-24">
-  <div class="flex flex-wrap justify-center gap-8 mt-4">
-    
+<div class="flex flex-col pt-24">
+  <div class="flex justify-center gap-8">
     <mat-card class="flex flex-col text-center items-center p-4 w-96 cursor-pointer" (click)="handleNavigateToHistoryPayments()">
       <mat-icon color="primary">history</mat-icon>
       <div>
-        <h2 class="text-xl font-bold">Histórico de Pagamentos</h2>
-        <p class="text-gray-600">Acompanhe todos os pagamentos recentes.</p>
+        <h2 class="text-xl font-bold">Histórico de Vendas</h2>
+        <p class="text-gray-600">Acompanhe todas as vendas recentes.</p>
       </div>
     </mat-card>
 
