--- a/src/components/saleshistory/saleshistory.component.html
+++ b/src/components/saleshistory/saleshistory.component.html
@@ -1,20 +1,58 @@
-<app-layout-options />
-<div class="flex h-screen">
-    <div class="flex flex-col w-96 p-5 ml-20 mt-2">
-        <h2 class="text-4xl font-bold text-slate-950">Histórico de Vendas</h2>
-        <div *ngFor="let sale of salesHistory" class="mt-4 p-4 border rounded shadow-md bg-white">
-            <div class="flex items-center space-x-4">
-                <img [src]="sale.product_image" alt="Product Image" class="w-16 h-16 rounded object-cover">
-                <div>
-                    <p class="font-semibold text-lg">{{ sale.product_name }}</p>
-                    <p class="text-gray-500">{{ sale.store_name }}</p>
-                </div>
-            </div>
-            <div class="mt-2">
-                <p><strong>Quantidade Vendida:</strong> {{ sale.quantity_sold }}</p>
-                <p><strong>Total Faturado:</strong> {{ sale.total_billed}}</p>
-                <p><strong>Vendedor:</strong> {{ sale.user_name }}</p>
-            </div>
-        </div>
-    </div>
+<app-layout-options></app-layout-options>
+
+<h2 class="text-4xl font-bold text-slate-950 mt-10 text-center">Histórico de Vendas</h2>
+
+<div class="table-container mx-auto p-10 text-center">
+  <table mat-table [dataSource]="salesHistory" class="mat-elevation-z8">
+    <ng-container matColumnDef="product_image">
+      <th mat-header-cell *matHeaderCellDef> Foto Produto </th>
+      <td mat-cell *matCellDef="let item" class="text-center">
+        <img [src]="item.product_image" alt="Produto" class="w-16 h-16 rounded object-cover" />
+      </td>
+    </ng-container>
+
+    <ng-container matColumnDef="product_name">
+      <th mat-header-cell *matHeaderCellDef> Produto </th>
+      <td mat-cell *matCellDef="let item" class="text-center">{{ item.product_name }}</td>
+    </ng-container>
+
+    <ng-container matColumnDef="store_name">
+      <th mat-header-cell *matHeaderCellDef> Loja </th>
+      <td mat-cell *matCellDef="let item" class="text-center">{{ item.store_name }}</td>
+    </ng-container>
+
+    <ng-container matColumnDef="quantity_sold">
+      <th mat-header-cell *matHeaderCellDef> Quantidade Vendida </th>
+      <td mat-cell *matCellDef="let item" class="text-center">{{ item.quantity_sold }}</td>
+    </ng-container>
+
+    <ng-container matColumnDef="total_billed">
+      <th mat-header-cell *matHeaderCellDef> Total Faturado </th>
+      <td mat-cell *matCellDef="let item" class="text-center">{{ item.total_billed }}</td>
+    </ng-container>
+
+    <ng-container matColumnDef="user_image">
+      <th mat-header-cell *matHeaderCellDef> Foto do Vendedor </th>
+      <td mat-cell *matCellDef="let item" class="text-center">
+        <img [src]="item.user_image" alt="Vendedor" class="w-12 h-12 rounded-full object-cover" />
+      </td>
+    </ng-container>
+
+    <ng-container matColumnDef="user_name">
+      <th mat-header-cell *matHeaderCellDef> Vendedor </th>
+      <td mat-cell *matCellDef="let item" class="text-center">{{ item.user_name }}</td>
+    </ng-container>
+
+    <ng-container matColumnDef="actions">
+      <th mat-header-cell *matHeaderCellDef> Ações </th>
+      <td mat-cell *matCellDef="let item" class="text-center">
+        <button mat-raised-button color="primary">Detalhes</button>
+      </td>
+    </ng-container>
+
+    <!-- Indicadores -->
+    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+    <!-- Conteúdo -->
+    <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
+  </table>
 </div>
