--- a/src/components/create-sales/create-sales.component.html
+++ b/src/components/create-sales/create-sales.component.html
@@ -6,6 +6,7 @@
 
       <mat-form-field class="w-full mb-6" appearance="fill">
         <mat-label>Produto</mat-label>
+        <mat-icon matPrefix color="primary">shopping_cart</mat-icon>
         <select matNativeControl formControlName="product_id">
           <option value="" disabled selected>Selecione um produto</option>
           <option *ngFor="let product of products" [value]="product.id">{{ product.name }}</option>
@@ -14,6 +15,7 @@
 
       <mat-form-field class="w-full mb-6" appearance="fill">
         <mat-label>Quantidade</mat-label>
+        <mat-icon matPrefix color="primary">filter_1</mat-icon>
         <input
           matInput
           type="number"
@@ -24,7 +26,8 @@
       </mat-form-field>
 
       <mat-form-field class="w-full mb-6" appearance="fill">
-        <mat-label>Data:</mat-label>
+        <mat-label>Data</mat-label>
+        <mat-icon matPrefix color="primary">calendar_today</mat-icon> 
         <input
           matInput
           type="date"
