--- a/src/components/create-sales/create-sales.component.html
+++ b/src/components/create-sales/create-sales.component.html
@@ -5,7 +5,7 @@
     <form [formGroup]="formSales" (submit)="onSubmitSales()" class="mt-6">
 
       <mat-form-field class="w-full mb-6" appearance="fill">
-        <mat-label>Produto</mat-label>
+        <mat-label>Produto Vendido</mat-label>
         <mat-icon matPrefix color="primary">shopping_cart</mat-icon>
         <select matNativeControl formControlName="product_id">
           <option value="" disabled selected>Selecione um produto</option>
@@ -14,7 +14,7 @@
       </mat-form-field>
 
       <mat-form-field class="w-full mb-6" appearance="fill">
-        <mat-label>Quantidade</mat-label>
+        <mat-label>Quantidade da Venda</mat-label>
         <mat-icon matPrefix color="primary">filter_1</mat-icon>
         <input
           matInput
@@ -26,7 +26,7 @@
       </mat-form-field>
 
       <mat-form-field class="w-full mb-6" appearance="fill">
-        <mat-label>Data</mat-label>
+        <mat-label>Data da Venda</mat-label>
         <mat-icon matPrefix color="primary">calendar_today</mat-icon> 
         <input
           matInput
