--- a/src/components/saleshistory/saleshistory.component.html
+++ b/src/components/saleshistory/saleshistory.component.html
@@ -6,51 +6,53 @@
   <table mat-table [dataSource]="salesHistory" class="mat-elevation-z8">
     <ng-container matColumnDef="product_image">
       <th mat-header-cell *matHeaderCellDef> Foto Produto </th>
-      <td mat-cell *matCellDef="let item" class="text-center">
+      <td mat-cell *matCellDef="let item">
         <img [src]="item.product_image" alt="Produto" class="w-16 h-16 rounded object-cover" />
       </td>
     </ng-container>
 
     <ng-container matColumnDef="product_name">
-      <th mat-header-cell *matHeaderCellDef> Produto </th>
-      <td mat-cell *matCellDef="let item" class="text-center">{{ item.product_name }}</td>
+      <th mat-header-cell *matHeaderCellDef class="center-text"> Produto </th>
+      <td mat-cell *matCellDef="let item" class="center-text">{{ item.product_name }}</td>
     </ng-container>
 
     <ng-container matColumnDef="store_name">
-      <th mat-header-cell *matHeaderCellDef> Loja </th>
-      <td mat-cell *matCellDef="let item" class="text-center">{{ item.store_name }}</td>
+      <th mat-header-cell *matHeaderCellDef class="center-text"> Loja </th>
+      <td mat-cell *matCellDef="let item" class="center-text">{{ item.store_name }}</td>
     </ng-container>
 
     <ng-container matColumnDef="quantity_sold">
-      <th mat-header-cell *matHeaderCellDef> Quantidade Vendida </th>
-      <td mat-cell *matCellDef="let item" class="text-center">{{ item.quantity_sold }}</td>
+        <th mat-header-cell *matHeaderCellDef class="center-text"> Quantidade Vendida </th>
+        <td mat-cell *matCellDef="let item" class="center-text">
+          {{ item.quantity_sold }}
+        </td>
     </ng-container>
 
     <ng-container matColumnDef="total_billed">
-      <th mat-header-cell *matHeaderCellDef> Total Faturado </th>
-      <td mat-cell *matCellDef="let item" class="text-center">{{ item.total_billed }}</td>
+      <th mat-header-cell *matHeaderCellDef class="center-text"> Total Faturado </th>
+      <td mat-cell *matCellDef="let item" class="center-text">{{ item.total_billed }}</td>
     </ng-container>
 
     <ng-container matColumnDef="date">
-        <th mat-header-cell *matHeaderCellDef> Data </th>
-        <td mat-cell *matCellDef="let item" class="text-center">{{ item.date }}</td>
+        <th mat-header-cell *matHeaderCellDef class="center-text"> Data </th>
+        <td mat-cell *matCellDef="let item" class="center-text">{{ item.date }}</td>
     </ng-container>
 
-    <ng-container matColumnDef="user_image">
+    <ng-container matColumnDef="user_image" >
       <th mat-header-cell *matHeaderCellDef> Foto do Vendedor </th>
-      <td mat-cell *matCellDef="let item" class="text-center">
+      <td mat-cell *matCellDef="let item">
         <img [src]="item.user_image" alt="Vendedor" class="w-12 h-12 rounded-full object-cover" />
       </td>
     </ng-container>
 
     <ng-container matColumnDef="user_name">
-      <th mat-header-cell *matHeaderCellDef> Vendedor </th>
-      <td mat-cell *matCellDef="let item" class="text-center">{{ item.user_name }}</td>
+      <th mat-header-cell *matHeaderCellDef class="center-text"> Vendedor </th>
+      <td mat-cell *matCellDef="let item" class="center-text">{{ item.user_name }}</td>
     </ng-container>
 
     <ng-container matColumnDef="actions">
-      <th mat-header-cell *matHeaderCellDef> Ações </th>
-      <td mat-cell *matCellDef="let item" class="text-center">
+      <th mat-header-cell *matHeaderCellDef class="center-text"> Ações </th>
+      <td mat-cell *matCellDef="let item" class="center-text">
         <button mat-raised-button color="primary">Detalhes</button>
       </td>
     </ng-container>
