--- a/src/components/auth/auth.component.html
+++ b/src/components/auth/auth.component.html
@@ -6,7 +6,7 @@
     <form [formGroup]="formAuth" (ngSubmit)="onSubmitAuth()" class="mt-6">
       <mat-form-field class="w-full mb-6" appearance="fill">
         <mat-label>Email</mat-label>
-        <mat-icon matPrefix>email</mat-icon>
+        <mat-icon matPrefix color="primary">email</mat-icon>
         <input
           matInput
           type="email"
@@ -17,7 +17,7 @@
       </mat-form-field>
       <mat-form-field class="w-full mb-6" appearance="fill">
         <mat-label>Senha</mat-label>
-        <mat-icon matPrefix>lock</mat-icon>
+        <mat-icon matPrefix color="primary">lock</mat-icon>
         <input
           matInput
           type="password"
