--- a/src/components/header/header.component.html
+++ b/src/components/header/header.component.html
@@ -1,5 +1,9 @@
 <mat-toolbar color="primary" class="fixed w-full z-50">
-  <div class="flex justify-end items-center w-full">
+  <div class="flex justify-between items-center w-full">
+    <div class="flex gap-2 items-center">
+      <mat-icon> pie_chart</mat-icon>
+      <h1 class="text-white font-bold text-xl">Teiú Finance</h1>
+    </div>
     <button mat-icon-button [matMenuTriggerFor]="menu" class="custom-avatar-button">
       <mat-icon>account_circle</mat-icon>
     </button>
