--- a/src/components/create-sales/create-sales.component.html
+++ b/src/components/create-sales/create-sales.component.html
@@ -1,6 +1,6 @@
 <app-layout-options></app-layout-options>
 <h2 class="text-4xl font-bold text-slate-950 mt-10 text-center">Registrar Venda</h2>
-<div class="pt-10 flex justify-center items-center gap-6">
+<div class="pt-10 flex justify-center items-center gap-6 pb-10">
   <mat-card class="w-full max-w-md p-6">
     <form [formGroup]="formSales" (submit)="onSubmitSales()" class="mt-6">
 
