--- a/src/components/layout-options/layout-options.component.html
+++ b/src/components/layout-options/layout-options.component.html
@@ -1,37 +1,36 @@
-<app-header />
-<div class="flex flex-col pt-24 p-10">
-  <div class="flex justify-center gap-8">
+<div class="flex h-full bg-gray-100">
 
-    <mat-card class="flex flex-col text-center items-center p-4 w-96 cursor-pointer" (click)="handleNavigateToCreateSales()">
-      <mat-icon color="primary">point_of_sale</mat-icon>
-      <div>
-        <h2 class="text-xl font-bold">Registrar Venda</h2>
-        <p class="text-gray-600">Registre uma venda da loja</p>
-      </div>
-    </mat-card>
+  <aside class="w-64 bg-white shadow-lg flex flex-col h-full">
+    
+    <div class="flex items-center gap-3 p-6 border-b">
+      <mat-icon>dashboard</mat-icon>
+      <h1 class="text-2xl font-bold text-gray-800">Dashboard</h1>
+    </div>
 
-    <mat-card class="flex flex-col text-center items-center p-4 w-96 cursor-pointer" (click)="handleNavigateToHistoryPayments()">
-      <mat-icon color="primary">history</mat-icon>
-      <div>
-        <h2 class="text-xl font-bold">Histórico de Vendas</h2>
-        <p class="text-gray-600">Acompanhe todas as vendas recentes.</p>
+    <nav class="flex-1 ">
+      <div class="space-y-4">
+        <a
+          *ngFor="let item of asideMenu"
+          (click)="item.action()"
+          (keydown.enter)="item.action()"
+          tabindex="0"
+          class="flex  gap-3 p-5 text-gray-600 hover:text-blue-600 hover:bg-gray-100 rounded"
+        >
+          <mat-icon>{{ item.icon }}</mat-icon>
+          {{ item.name }}
+        </a>
       </div>
-    </mat-card>
+    </nav>
 
-    <mat-card class="flex flex-col text-center items-center p-4 w-96 cursor-pointer" (click)="handleNavigateToProductBilling()">
-      <mat-icon color="primary">attach_money</mat-icon>
-      <div>
-        <h2 class="text-xl font-bold">Faturamento</h2>
-        <p class="text-gray-600">Veja o faturamento total e mensal.</p>
-      </div>
-    </mat-card>
+    <div class="p-4 border-t">
+      <button
+        (click)="handleLogout()"
+        class="w-full flex text-gray-600 hover:text-red-600 hover:bg-red-100 px-4 py-2 rounded"
+      >
+        <mat-icon class="mr-2">logout</mat-icon>
+        Logout
+      </button>
+    </div>
 
-    <mat-card class="flex flex-col text-center items-center p-4 w-96 cursor-pointer">
-      <mat-icon color="primary">group</mat-icon>
-      <div>
-        <h2 class="text-xl font-bold">Funcionários</h2>
-        <p class="text-gray-600">Gerencie os dados dos funcionários.</p>
-      </div>
-    </mat-card>
-  </div>
+  </aside>
 </div>
