--- a/src/components/layout-options/layout-options.component.html
+++ b/src/components/layout-options/layout-options.component.html
@@ -1,5 +1,4 @@
-<div class="flex h-full bg-gray-100">
-
+<div class="flex h-full bg-gray-100 fixed">
   <aside class="w-64 bg-white shadow-lg flex flex-col h-full">
     
     <div class="flex items-center gap-3 p-6 border-b">
@@ -7,14 +6,15 @@
       <h1 class="text-2xl font-bold text-gray-800">Dashboard</h1>
     </div>
 
-    <nav class="flex-1 ">
-      <div class="space-y-4">
+    <nav class="flex-1">
+      <div class="flex flex-col  items-start w-full">
         <a
           *ngFor="let item of asideMenu"
           (click)="item.action()"
           (keydown.enter)="item.action()"
           tabindex="0"
-          class="flex  gap-3 p-5 text-gray-600 hover:text-blue-600 hover:bg-gray-100 rounded"
+          class="flex p-6 border-b w-full gap-2 items-center text-gray-600 hover:text-blue-600 hover:bg-gray-100 rounded"
+          style="transition: background-color 0.3s ease;"
         >
           <mat-icon>{{ item.icon }}</mat-icon>
           {{ item.name }}
