Rework na tabela de funcionários e histórico de vendas

--- a/src/components/employees/employees.component.html
+++ b/src/components/employees/employees.component.html
@@ -9,10 +9,10 @@
         <table class="min-w-full bg-white border border-gray-300 shadow">
           <thead>
             <tr class="bg-gray-200 text-center border-b">
-              <th class="px-6 py-3 font-semibold text-gray-700">Foto</th>
-              <th class="px-6 py-3 font-semibold text-gray-700">Nome</th>
-              <th class="px-6 py-3 font-semibold text-gray-700">Email</th>
-              <th class="px-6 py-3 font-semibold text-gray-700">Empresa</th>
+              <th class="px-6 py-3 font-semibold text-gray-900">Foto</th>
+              <th class="px-6 py-3 font-semibold text-gray-900">Nome</th>
+              <th class="px-6 py-3 font-semibold text-gray-900">Email</th>
+              <th class="px-6 py-3 font-semibold text-gray-900">Empresa</th>
             </tr>
           </thead>
           <tbody>
@@ -22,7 +22,7 @@
               </td>
               <td class="p-4 font-semibold text-gray-800">{{ employee.name }}</td>
               <td class="p-4 font-semibold text-gray-800">{{ employee.email }}</td>
-              <td class="p-4 text-gray-600">{{ employee.store }}</td>
+              <td class="p-4 font-semibold text-gray-800">{{ employee.store }}</td>
             </tr>
           </tbody>
         </table>
