--- a/src/components/layout-options/layout-options.component.html
+++ b/src/components/layout-options/layout-options.component.html
@@ -7,13 +7,13 @@
     </div>
 
     <nav class="flex-1">
-      <div class="flex flex-col  items-start w-full">
+      <div class="flex flex-col  items-start w-full text-gray-800">
         <a
           *ngFor="let item of asideMenu"
           (click)="item.action()"
           (keydown.enter)="item.action()"
           tabindex="0"
-          class="flex p-6 border-b w-full gap-2 items-center text-gray-600 hover:text-blue-600 hover:bg-gray-100 rounded"
+          class="flex p-6 border-b w-full gap-2 items-center hover:text-blue-600 hover:bg-gray-100 rounded"
           style="transition: background-color 0.3s ease;"
         >
           <mat-icon>{{ item.icon }}</mat-icon>
