Mudando o nome do component para dashboard

--- a/src/components/employees/employees.component.html
+++ b/src/components/employees/employees.component.html
@@ -1,5 +1,5 @@
 <div class="flex h-full">
-    <app-layout-options />
+    <app-dashboard />
   
     <div class="ml-64 w-full px-8 py-6">
       <div class="flex items-center">
