--- a/src/components/productbilling/productbilling.component.html
+++ b/src/components/productbilling/productbilling.component.html
@@ -1,5 +1,5 @@
 <div class="flex h-full">
-  <app-layout-options />
+  <app-dashboard />
 
   <div class="ml-64 flex flex-col w-full px-8 py-6">
     <div class="flex items-center mb-8 pl-6">
