--- a/src/components/auth/auth.component.html
+++ b/src/components/auth/auth.component.html
@@ -1,8 +1,11 @@
 <div class="min-h-screen flex items-center justify-center">
   <mat-card class="w-full max-w-md p-6">
-    <mat-card-title class="text-center font-bold text-gray-800">
-      Bem-vindo
-    </mat-card-title>
+    <div class="flex flex-col items-center">
+      <mat-icon color="primary">emoji_people</mat-icon>
+      <mat-card-title class="text-center font-bold text-gray-800">
+        Bem-vindo
+      </mat-card-title>
+    </div>
     <form [formGroup]="formAuth" (ngSubmit)="onSubmitAuth()" class="mt-6">
       <mat-form-field class="w-full mb-6" appearance="fill">
         <mat-label>Email</mat-label>
