--- a/src/components/employees/employees.component.html
+++ b/src/components/employees/employees.component.html
@@ -21,15 +21,15 @@
               <td class="p-4 flex justify-center items-center">
                 <img [src]="employee.image_url" alt="Foto do Funcionário" class="w-12 h-12 rounded-full object-cover" />
               </td>
-              <td class="p-4 font-semibold text-gray-800">{{ employee.name }}</td>
-              <td class="p-4 font-semibold text-gray-800">{{ employee.email }}</td>
-              <td class="p-4 font-semibold text-gray-800">{{ employee.store }}</td>
-              <td class="p-4 font-semibold text-gray-800">
+              <td class="p-4 font-medium text-gray-800">{{ employee.name }}</td>
+              <td class="p-4 font-medium text-gray-800">{{ employee.email }}</td>
+              <td class="p-4 font-medium text-gray-800">{{ employee.store }}</td>
+              <td class="p-4 font-medium text-gray-800">
                 <button class="rounded-full">
-                  <mat-icon>edit</mat-icon>
+                  <mat-icon color="primary">edit</mat-icon>
                 </button>
                 <button  class="pl-2 rounded-full">
-                  <mat-icon>delete</mat-icon>
+                  <mat-icon color="primary">delete</mat-icon>
                 </button>
               </td>
             </tr>
