--- a/src/components/saleshistory/saleshistory.component.html
+++ b/src/components/saleshistory/saleshistory.component.html
@@ -23,14 +23,14 @@
             <td class="p-4 flex justify-center items-center">
               <img [src]="sales.product_image" alt="Foto do Produto" class="w-12 h-12 rounded-full object-cover" />
             </td>
-            <td class="p-4 font-semibold text-gray-800">{{ sales.product_name }}</td>
-            <td class="p-4 font-semibold text-gray-800">{{ sales.quantity_sold }}</td>
-            <td class="p-4 font-semibold text-gray-800">{{ sales.total_billed }}</td>
+            <td class="p-4 font-medium text-gray-800">{{ sales.product_name }}</td>
+            <td class="p-4 font-medium text-gray-800">{{ sales.quantity_sold }}</td>
+            <td class="p-4 font-medium text-gray-800">{{ sales.total_billed }}</td>
             <td class="p-4 flex justify-center items-center">
               <img [src]="sales.user_image" alt="Foto do Funcionário" class="w-12 h-12 rounded-full object-cover" />
             </td>
-            <td class="p-4 font-semibold text-gray-800">{{ sales.user_name }}</td>
-            <td class="p-4 font-semibold text-gray-800">{{ sales.store_name }}</td>
+            <td class="p-4 font-medium text-gray-800">{{ sales.user_name }}</td>
+            <td class="p-4 font-medium text-gray-800">{{ sales.store_name }}</td>
           </tr>
         </tbody>
       </table>
