criando um padrão de cores

--- a/src/components/employees/employees.component.html
+++ b/src/components/employees/employees.component.html
@@ -8,12 +8,12 @@
       <div class="p-6">
         <table class="min-w-full bg-white border border-gray-300 shadow">
           <thead>
-            <tr class="bg-gray-200 text-center border-b">
-              <th class="px-6 py-3 font-semibold text-gray-900">Foto</th>
-              <th class="px-6 py-3 font-semibold text-gray-900">Nome</th>
-              <th class="px-6 py-3 font-semibold text-gray-900">Email</th>
-              <th class="px-6 py-3 font-semibold text-gray-900">Empresa</th>
-              <th class="px-6 py-3 font-semibold text-gray-900">Ações</th>
+            <tr class="bg-indigo-500 text-center border-b">
+              <th class="px-6 py-3 font-normal text-white">Foto</th>
+              <th class="px-6 py-3 font-normal text-white">Nome</th>
+              <th class="px-6 py-3 font-normal text-white">Email</th>
+              <th class="px-6 py-3 font-normal text-white">Empresa</th>
+              <th class="px-6 py-3 font-normal text-white">Ações</th>
             </tr>
           </thead>
           <tbody>
