--- a/src/components/saleshistory/saleshistory.component.html
+++ b/src/components/saleshistory/saleshistory.component.html
@@ -6,16 +6,16 @@
       <h2 class="text-5xl font-bold text-slate-950 pl-6">Histórico de Vendas</h2>
     </div>
     <div class="p-6">
-      <table class="min-w-full bg-white border border-gray-300 shadow rounded">
+      <table class="min-w-full bg-white border shadow rounded">
         <thead>
-          <tr class="bg-gray-200 text-center border-b">
-            <th class="px-6 py-3 font-semibold text-gray-900">Foto</th>
-            <th class="px-6 py-3 font-semibold text-gray-900">Nome</th>
-            <th class="px-6 py-3 font-semibold text-gray-900">Quantidade</th>
-            <th class="px-6 py-3 font-semibold text-gray-900">Faturamento</th>
-            <th class="px-6 py-3 font-semibold text-gray-900">Foto do Funcionário</th>
-            <th class="px-6 py-3 font-semibold text-gray-900">Nome do Funcionário</th>
-            <th class="px-6 py-3 font-semibold text-gray-900">Empresa</th>
+          <tr class="bg-indigo-500 text-center border-b">
+            <th class="px-6 py-3 font-normal text-white">Foto</th>
+            <th class="px-6 py-3 font-normal text-white">Nome</th>
+            <th class="px-6 py-3 font-normal text-white">Quantidade</th>
+            <th class="px-6 py-3 font-normal text-white">Faturamento</th>
+            <th class="px-6 py-3 font-normal text-white">Foto do Funcionário</th>
+            <th class="px-6 py-3 font-normal text-white">Nome do Funcionário</th>
+            <th class="px-6 py-3 font-normal text-white">Empresa</th>
           </tr>
         </thead>
         <tbody>
