adicionado hover no dashboard

--- a/src/components/dashboard/layout-options.component.html
+++ b/src/components/dashboard/layout-options.component.html
@@ -13,7 +13,7 @@
           (click)="item.action()"
           (keydown.enter)="item.action()"
           tabindex="0"
-          class="flex p-6 border-b w-full gap-2 items-center hover:text-blue-600 hover:bg-gray-100 rounded"
+          class="flex p-6 border-b w-full gap-2 items-center hover:text-indigo-600 hover:bg-gray-100 rounded"
           style="transition: background-color 0.3s ease;"
         >
           <mat-icon color="primary">{{ item.icon }}</mat-icon>
