--- a/src/components/dashboard/layout-options.component.html
+++ b/src/components/dashboard/layout-options.component.html
@@ -27,7 +27,7 @@
         (click)="handleLogout()"
         class="w-full flex text-gray-800 font-medium hover:text-red-600 hover:bg-red-100 px-4 py-2 rounded"
       >
-        <mat-icon class="mr-2" color="primary">logout</mat-icon>
+        <mat-icon class="mr-2">logout</mat-icon>
         Logout
       </button>
     </div>
